--- a/src/app/user-profile/user-profile.css
+++ b/src/app/user-profile/user-profile.css
@@ -2,7 +2,7 @@
   display: flex;
   padding: 20px;
   gap: 20px; 
-  background-color: #f0f2f5; 
+  background-color: white; 
   margin-top: 50px; 
 }
 
