--- a/src/app/features/profiles/employer/employer-profile/employer-profile.html
+++ b/src/app/features/profiles/employer/employer-profile/employer-profile.html
@@ -6,7 +6,7 @@
         <div class="info row">
 
             <div class="image col-lg-3 col-md-3 col-sm-12 me-3">
-                <img src="" alt="image">
+                <img src="{{empData().companyImage}}" alt="image">
             </div>
 
             <div class="col-lg-5 col-md-6 col-sm-12">
