Start with Seeker Application and Working on Edit Seeker Profile

--- a/src/app/features/Explore/explore.html
+++ b/src/app/features/Explore/explore.html
@@ -1,5 +1,5 @@
 <div class="hero">
-    <div class="row mt-4 mb-3">
+    <div class="row mb-3">
         <div class="col-lg-10 col-md-12 col-sm-12">
             <h1>Explore Job Opportunities</h1>
             <p>Find your dream job from a wide range of listings.</p>
