--- a/src/app/features/Home/home/home.html
+++ b/src/app/features/Home/home/home.html
@@ -1,4 +1,4 @@
-<div class="home-container mt-5">
+<div class="home-container">
     <!-----------------------------Hero Section--------------------------->
     <section class="hero-section">
         <div class="hero-container p-5">
