--- a/src/app/shared/components/navbar/navbar.html
+++ b/src/app/shared/components/navbar/navbar.html
@@ -1,27 +1,5 @@
-<!-- <nav class="navbar navbar-expand-lg">
-  <div class="container-fluid">
-    <div class="logo-icon"><i class="bi bi-suitcase-lg"></i></div>
-    <a class="navbar-brand" routerLink="/home">HireSmart</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0"> 
 
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="/explore">Explore</a>
-        </li>  
-
-      </ul>
-      <form class="d-flex">
-        <button routerLink="/login" class="LogInBtn" type="submit">Log In</button>
-        <button routerLink="/register" class="SignUpBtn" type="submit">Sign Up</button>
-      </form>
-    </div>
-  </div>
-</nav> -->
-
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg bg-body-tertiary ">
   <div class="container-fluid">
     <!-- Logo and Brand -->
     <div class="logo-icon me-2">
@@ -110,7 +88,7 @@
 
 
 
-<main>
+<main class="mt-5 pt-3">
   <router-outlet></router-outlet>
 </main>
 
