--- a/src/app/features/Jobs/job-details/job-details.html
+++ b/src/app/features/Jobs/job-details/job-details.html
@@ -1,4 +1,4 @@
-<div style="margin: 100px;">
+<div style="margin: 0px 100px;">
     <!-- Loading indicator -->
     @if (loading()) {
         <div class="text-center p-5">
@@ -53,8 +53,8 @@
             </div>
             <div class="col-lg-3">
                 <input type="button" class="apply-now-btn form-control" routerLink="/jobApp" value="Apply Now">
-                <button class="save-job-btn form-control" (click)="AddToSaved()" [class.saved]="isSaved">
-                    <i class="bi" [class.bi-bookmark-check]="isSaved" [class.bi-bookmark]="!isSaved"></i> {{ isSaved ? 'Saved' : ' Save' }}
+                <button class="save-job-btn form-control" (click)="toggleSaved()" [class.saved]="isSavedFlag()">
+                    <i class="bi" [class.bi-bookmark-check]="isSavedFlag()" [class.bi-bookmark]="!isSavedFlag()"></i> {{ isSavedFlag() ? 'Saved' : ' Save' }}
                 </button>  
             </div>
 
